--- a/index.html
+++ b/index.html
@@ -1,23 +1,80 @@
-# Geosciences Gaming Website
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Geosciences Gaming Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 1em 0;
+            text-align: center;
+        }
+        nav {
+            text-align: center;
+            margin: 1em 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #4CAF50;
+            font-weight: bold;
+        }
+        section {
+            max-width: 800px;
+            margin: 2em auto;
+            padding: 2em;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 1em 0;
+            background-color: #4CAF50;
+            color: white;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
 
-Welcome to the Geosciences Gaming Website repository! This project is dedicated to providing an engaging and interactive learning experience through games focused on geosciences.
+    <header>
+        <h1>Geosciences Gaming Website</h1>
+    </header>
 
-## Overview
+    <nav>
+        <a href="#about">About</a>
+        <a href="#games">Games</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-Geosciences cover a vast array of topics, including geology, meteorology, oceanography, and environmental science. This gaming platform aims to make learning about these subjects fun and interactive by incorporating educational games that challenge and entertain.
+    <section id="about">
+        <h2>About Us</h2>
+        <p>Welcome to the Geosciences Gaming Website! We provide engaging and interactive learning experiences through games focused on various geosciences topics. Our goal is to make learning about geology, meteorology, oceanography, and environmental science fun and accessible for everyone.</p>
+    </section>
 
-## Features
+    <section id="games">
+        <h2>Our Games</h2>
+        <p>Explore our collection of educational games designed to teach various geosciences concepts. Test your knowledge with interactive quizzes, and enjoy visual simulations that demonstrate geosciences phenomena in an easy-to-understand format.</p>
+    </section>
 
-- **Educational Games**: Engage with games designed to teach various geosciences concepts, from rock formations to weather patterns and beyond.
-- **Interactive Quizzes**: Test your knowledge with interactive quizzes that reinforce learning and provide instant feedback.
-- **Visual Simulations**: Explore visual simulations that demonstrate geosciences phenomena in an easy-to-understand format.
-- **Community Challenges**: Participate in community challenges and compete with others to see who can achieve the highest scores and master the concepts.
-- **Resource Library**: Access a library of articles, videos, and other resources to deepen your understanding of geosciences.
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Have questions or feedback? Reach out to us at <a href="mailto:email@example.com">email@example.com</a>. We’d love to hear from you!</p>
+    </section>
 
-## Getting Started
+    <footer>
+        <p>&copy; 2024 Geosciences Gaming Website. All rights reserved.</p>
+    </footer>
 
-To get started with this gaming platform, follow these steps:
-
-1. **Clone the Repository**: Download the repository to your local machine.
-   ```bash
-   git clone https://github.com/<your-username>/geosciences-gaming-website.git
+</body>
+</html>
