--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
             width: 100%;
             bottom: 0;
         }
+        .game-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .game-list li {
+            margin: 1em 0;
+        }
+        .game-list a {
+            text-decoration: none;
+            color: #4CAF50;
+        }
     </style>
 </head>
 <body>
@@ -64,7 +75,13 @@
 
     <section id="games">
         <h2>Our Games</h2>
-        <p>Explore our collection of educational games designed to teach various geosciences concepts. Test your knowledge with interactive quizzes, and enjoy visual simulations that demonstrate geosciences phenomena in an easy-to-understand format.</p>
+        <ul class="game-list">
+            <li><a href="game1.html">Rock Identification Challenge</a></li>
+            <li><a href="game2.html">Weather Pattern Puzzle</a></li>
+            <li><a href="game3.html">Ocean Currents Adventure</a></li>
+            <li><a href="game4.html">Earthquake Simulator</a></li>
+            <li><a href="game5.html">Environmental Impact Quiz</a></li>
+        </ul>
     </section>
 
     <section id="contact">
