--- a/game1.html
+++ b/game1.html
@@ -1,246 +1,319 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Wild Hunt</title>
-<style>
-body {
-  margin: 0;
-  overflow: hidden;
-  background-color: #c6e2ff; /* Daytime sky */
-}
-
-#game-container {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-}
-
-.beast {
-  position: absolute;
-  font-size: 50px;
-  color: #333;
-  text-align: center;
-  transition: transform 1s ease-in-out;
-}
-
-.projectile {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #ff0000;
-  transition: transform 0.5s ease-in-out;
-}
-
-.explosion {
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-radius: 50%;
-  background: radial-gradient(circle, rgba(255, 0, 0, 1) 0%, rgba(255, 0, 0, 0) 100%);
-  opacity: 1;
-  transition: all 0.5s ease-in-out;
-}
-
-#ui {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wildlife Defender</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+            background-color: #87CEEB;
+        }
+        canvas {
+            display: block;
+            margin: 0 auto;
+            background: #87CEEB;
+        }
+        .background {
+            position: absolute;
+            z-index: -1;
+            font-size: 3em;
+            pointer-events: none;
+        }
+        #ui {
+            position: absolute;
+            top: 10px;
+            width: 100%;
+            text-align: center;
+            color: #fff;
+            font-size: 1.2em;
+            font-weight: bold;
+            text-shadow: 1px 1px 2px black;
+        }
+        #game-over {
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #fff;
+            text-align: center;
+            font-size: 2em;
+            text-shadow: 2px 2px 4px black;
+        }
+        #restart-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1em;
+            background: #ff5733;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #restart-btn:hover {
+            background: #ff7845;
+        }
+    </style>
 </head>
 <body>
+    <div id="ui">
+        Score: <span id="score">0</span> | Lives: <span id="lives">10</span> | Level: <span id="level">1</span>
+    </div>
+    <canvas id="gameCanvas"></canvas>
+    <div id="game-over">
+        <p>Game Over</p>
+        <p>Final Score: <span id="final-score"></span></p>
+        <button id="restart-btn">Restart</button>
+    </div>
 
-<div id="game-container"></div>
-<div id="ui">
-  Score: <span id="score">0</span>
-  Lives: <span id="lives">10</span>
-  Level: <span id="level">1</span>
-</div>
+    <script>
+        const canvas = document.getElementById("gameCanvas");
+        const ctx = canvas.getContext("2d");
 
-<script>
-const gameContainer = document.getElementById('game-container');
-const scoreDisplay = document.getElementById('score');
-const livesDisplay = document.getElementById('lives');
-const levelDisplay = document.getElementById('level');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
 
-let score = 0;
-let lives = 10;
-let level = 1;
-let beasts = [];
-let projectiles = [];
-let explosions = [];
-let gameInterval;
-let beastSpawnInterval;
-let beastSpeed = 0.5; 
-let projectileSpeed = 5;
-let isGameOver = false;
+        const scoreDisplay = document.getElementById("score");
+        const livesDisplay = document.getElementById("lives");
+        const levelDisplay = document.getElementById("level");
+        const gameOverScreen = document.getElementById("game-over");
+        const finalScoreDisplay = document.getElementById("final-score");
+        const restartButton = document.getElementById("restart-btn");
 
-const beastTypes = ['🦁', '🐯', '🐺', '🐘', '🐍', '🦒', '🦄', '🐉'];
-const rareBeasts = ['🦄', '🐉'];
+        let score = 0;
+        let lives = 10;
+        let level = 1;
+        let beasts = [];
+        let projectiles = [];
+        let explosions = [];
+        let staticElements = [];
+        let spawnInterval = 2000;
+        let lastSpawn = 0;
+        let gameRunning = true;
 
-function createBeast() {
-  const beast = document.createElement('div');
-  beast.classList.add('beast');
-  const randomX = Math.random() * (gameContainer.clientWidth - 50);
-  beast.style.left = randomX + 'px';
-  beast.textContent = getRandomBeast();
-  beast.style.top = 0; // Start beasts at the top
-  gameContainer.appendChild(beast);
-  beasts.push({
-    element: beast,
-    y: 0,
-  });
-}
+        const beastTypes = [
+            { emoji: "🦁", points: 10, bonusLife: true },
+            { emoji: "🐯", points: 10 },
+            { emoji: "🐺", points: 10 },
+            { emoji: "🐘", points: 10 },
+            { emoji: "🐍", points: 10 },
+            { emoji: "🦒", points: 10 },
+            { emoji: "🦄", points: 50 },
+            { emoji: "🐉", points: 50 },
+        ];
 
-function getRandomBeast() {
-  const randomIndex = Math.floor(Math.random() * beastTypes.length);
-  return beastTypes[randomIndex];
-}
+        const player = {
+            x: canvas.width / 2,
+            y: canvas.height - 100,
+            width: 50,
+            height: 50,
+            emoji: "🏹",
+        };
 
-function createProjectile(x, y) {
-  const projectile = document.createElement('div');
-  projectile.classList.add('projectile');
-  projectile.style.left = x + 'px';
-  projectile.style.top = y + 'px';
-  gameContainer.appendChild(projectile);
-  projectiles.push({
-    element: projectile,
-    x: x,
-    y: y,
-    dx: 0,
-    dy: -projectileSpeed, // Move projectiles upwards
-  });
-}
-
-function createExplosion(x, y) {
-  const explosion = document.createElement('div');
-  explosion.classList.add('explosion');
-  explosion.style.left = x + 'px';
-  explosion.style.top = y + 'px';
-  gameContainer.appendChild(explosion);
-  explosions.push(explosion);
-  setTimeout(() => {
-    explosion.remove();
-    const index = explosions.indexOf(explosion);
-    explosions.splice(index, 1);
-  }, 500);
-}
-
-function handleProjectileMovement() {
-  projectiles.forEach((projectile, index) => {
-    projectile.x += projectile.dx;
-    projectile.y += projectile.dy;
-
-    // Curve projectiles after level 4
-    if (level >= 4) {
-      projectile.dx += 0.1;
-    }
-
-    projectile.element.style.left = projectile.x + 'px';
-    projectile.element.style.top = projectile.y + 'px';
-
-    if (projectile.y < 0) { // Remove projectiles that go off-screen
-      projectile.element.remove();
-      projectiles.splice(index, 1);
-    }
-  });
-}
-
-function handleBeastMovement() {
-  beasts.forEach((beast, index) => {
-    beast.y += beastSpeed;
-    beast.element.style.top = beast.y + 'px'; 
-
-    if (beast.y > gameContainer.clientHeight) { 
-      beast.element.remove();
-      beasts.splice(index, 1);
-      lives--;
-      livesDisplay.textContent = lives;
-
-      if (lives === 0) {
-        gameOver();
-      }
-    }
-  });
-}
-
-function checkCollisions() {
-  beasts.forEach((beast) => {
-    projectiles.forEach((projectile, projectileIndex) => {
-      const beastRect = beast.element.getBoundingClientRect();
-      const projectileRect = projectile.element.getBoundingClientRect();
-
-      if (
-        projectileRect.left < beastRect.right &&
-        projectileRect.right > beastRect.left &&
-        projectileRect.top < beastRect.bottom &&
-        projectileRect.bottom > beastRect.top
-      ) {
-        projectile.element.remove();
-        projectiles.splice(projectileIndex, 1);
-        createExplosion(beastRect.left, beastRect.top);
-
-        if (rareBeasts.includes(beast.element.textContent)) {
-          score += 50;
-          lives++;
-          livesDisplay.textContent = lives;
-        } else {
-          score += 10;
+        function spawnStaticElements() {
+            const elements = ["🌳", "⛰️", "🪨"];
+            for (let i = 0; i < 10; i++) {
+                staticElements.push({
+                    emoji: elements[Math.floor(Math.random() * elements.length)],
+                    x: Math.random() * (canvas.width - 50),
+                    y: Math.random() * (canvas.height - 200),
+                });
+            }
         }
 
-        scoreDisplay.textContent = score;
-
-        if (score >= 200) {
-          level++;
-          levelDisplay.textContent = level;
-          beastSpeed += 0.1;
-          clearInterval(beastSpawnInterval);
-          beastSpawnInterval = setInterval(createBeast, 1000 / level);
+        function drawStaticElements() {
+            ctx.font = "40px Arial";
+            staticElements.forEach((element) => {
+                ctx.fillText(element.emoji, element.x, element.y);
+            });
         }
 
-        beast.element.remove();
-        const beastIndex = beasts.indexOf(beast);
-        beasts.splice(beastIndex, 1);
-      }
-    });
-  });
-}
+        function spawnBeast() {
+            const beastType =
+                beastTypes[Math.floor(Math.random() * beastTypes.length)];
+            const x = Math.random() * (canvas.width - 40);
+            beasts.push({
+                ...beastType,
+                x,
+                y: -50,
+                speed: 2 + level * 0.3,
+            });
+        }
 
-function gameLoop() {
-  handleBeastMovement();
-  handleProjectileMovement();
-  checkCollisions();
-}
+        function drawBeast(beast) {
+            ctx.font = "40px Arial";
+            ctx.fillText(beast.emoji, beast.x, beast.y);
+        }
 
-function gameOver() {
-  clearInterval(gameInterval);
-  clearInterval(beastSpawnInterval);
-  isGameOver = true;
-  alert('Game Over! Your score: ' + score);
-}
+        function drawPlayer() {
+            ctx.font = "50px Arial";
+            ctx.fillText(player.emoji, player.x, player.y);
+        }
 
-function startGame() {
-  if (!isGameOver) {
-    gameInterval = setInterval(gameLoop, 16);
-    beastSpawnInterval = setInterval(createBeast, 1000);
-  }
-}
+        function drawProjectile(projectile) {
+            ctx.font = "30px Arial";
+            ctx.fillText("❤️", projectile.x, projectile.y);
+        }
 
-// Event listeners
-gameContainer.addEventListener('click', (event) => {
-  createProjectile(event.clientX, event.clientY);
-});
+        function drawExplosion(explosion) {
+            ctx.font = "50px Arial";
+            ctx.fillText("😇💖", explosion.x - 25, explosion.y);
+        }
 
-gameContainer.addEventListener('touchstart', (event) => {
-  createProjectile(event.touches[0].clientX, event.touches[0].clientY);
-});
+        function reflectProjectile(projectile) {
+            projectile.dy = -projectile.dy;
+            projectile.dx = (Math.random() - 0.5) * 4;
+        }
 
-startGame();
-</script>
+        function playBeepSound() {
+            const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+            const oscillator = audioCtx.createOscillator();
+            oscillator.type = "sine";
+            oscillator.frequency.setValueAtTime(440, audioCtx.currentTime);
+            oscillator.connect(audioCtx.destination);
+            oscillator.start();
+            oscillator.stop(audioCtx.currentTime + 0.1);
+        }
+
+        function shootProjectile() {
+            projectiles.push({ x: player.x, y: player.y - 10, dx: 0, dy: -7 });
+        }
+
+        function update() {
+            const currentTime = Date.now();
+            if (currentTime - lastSpawn > spawnInterval) {
+                spawnBeast();
+                lastSpawn = currentTime;
+            }
+
+            projectiles = projectiles.filter((projectile) => {
+                projectile.y += projectile.dy;
+                projectile.x += projectile.dx;
+                staticElements.forEach((element) => {
+                    if (
+                        projectile.x > element.x &&
+                        projectile.x < element.x + 40 &&
+                        projectile.y > element.y &&
+                        projectile.y < element.y + 40
+                    ) {
+                        reflectProjectile(projectile);
+                    }
+                });
+                return projectile.y > 0 && projectile.x > 0 && projectile.x < canvas.width;
+            });
+
+            beasts = beasts.filter((beast) => {
+                beast.y += beast.speed;
+                if (beast.y > canvas.height) {
+                    lives--;
+                    return false;
+                }
+                return true;
+            });
+
+            explosions = explosions.filter((explosion) => {
+                explosion.radius += 2;
+                return explosion.radius < 50;
+            });
+
+            projectiles.forEach((projectile, pIndex) => {
+                beasts.forEach((beast, bIndex) => {
+                    if (
+                        projectile.x > beast.x &&
+                        projectile.x < beast.x + 40 &&
+                        projectile.y > beast.y &&
+                        projectile.y < beast.y + 40
+                    ) {
+                        score += beast.points;
+                        if (beast.bonusLife) lives = Math.min(10, lives + 1);
+                        explosions.push({
+                            x: beast.x + 20,
+                            y: beast.y + 20,
+                            radius: 10,
+                        });
+                        playBeepSound();
+                        projectiles.splice(pIndex, 1);
+                        beasts.splice(bIndex, 1);
+                    }
+                });
+            });
+
+            if (score >= level * 200) {
+                level++;
+                spawnInterval = Math.max(500, spawnInterval / 1.5);
+            }
+
+            if (lives <= 0) endGame();
+        }
+
+        function draw() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            drawStaticElements();
+            drawPlayer();
+            projectiles.forEach(drawProjectile);
+            beasts.forEach(drawBeast);
+            explosions.forEach(drawExplosion);
+            scoreDisplay.textContent = score;
+            livesDisplay.textContent = lives;
+            levelDisplay.textContent = level;
+        }
+
+        function gameLoop() {
+            if (!gameRunning) return;
+            update();
+            draw();
+            requestAnimationFrame(gameLoop);
+        }
+
+        function endGame() {
+            gameRunning = false;
+            finalScoreDisplay.textContent = score;
+            gameOverScreen.style.display = "block";
+        }
+
+        canvas.addEventListener("touchstart", (e) => {
+            const touchX = e.touches[0].clientX;
+            player.x = Math.min(
+                Math.max(touchX - player.width / 2, 0),
+                canvas.width - player.width
+            );
+            shootProjectile();
+        });
+
+        canvas.addEventListener("mousedown", (e) => {
+            const clickX = e.clientX;
+            player.x = Math.min(
+                Math.max(clickX - player.width / 2, 0),
+                canvas.width - player.width
+            );
+            shootProjectile();
+        });
+
+        restartButton.addEventListener("click", () => {
+            score = 0;
+            lives = 10;
+            level = 1;
+            beasts = [];
+            projectiles = [];
+            explosions = [];
+            staticElements = [];
+            spawnInterval = 2000;
+            lastSpawn = 0;
+            gameRunning = true;
+            gameOverScreen.style.display = "none";
+            spawnStaticElements();
+            gameLoop();
+        });
+
+        spawnStaticElements();
+        gameLoop();
+    </script>
 </body>
 </html>
