--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #87CEEB; /* Light blue */
             color: white;
             padding: 1em 0;
             text-align: center;
@@ -24,7 +24,7 @@
         nav a {
             margin: 0 15px;
             text-decoration: none;
-            color: #4CAF50;
+            color: #87CEEB; /* Light blue */
             font-weight: bold;
         }
         section {
@@ -37,7 +37,7 @@
         footer {
             text-align: center;
             padding: 1em 0;
-            background-color: #4CAF50;
+            background-color: #87CEEB; /* Light blue */
             color: white;
             position: fixed;
             width: 100%;
@@ -52,7 +52,7 @@
         }
         .game-list a {
             text-decoration: none;
-            color: #4CAF50;
+            color: #87CEEB; /* Light blue */
         }
     </style>
 </head>
