--- a/index.html
+++ b/index.html
@@ -6,38 +6,41 @@
     <title>Geosciences Gaming Website</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            color: #333;
         }
         header {
-            background-color: #87CEEB; /* Light blue */
+            background-color: #1E90FF; /* Dodger Blue */
             color: white;
-            padding: 1em 0;
+            padding: 1.5em 0;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         nav {
             text-align: center;
-            margin: 1em 0;
+            margin: 1.5em 0;
         }
         nav a {
             margin: 0 15px;
             text-decoration: none;
-            color: #87CEEB; /* Light blue */
+            color: #1E90FF;
             font-weight: bold;
+            font-size: 1.1em;
         }
         section {
-            max-width: 800px;
+            max-width: 900px;
             margin: 2em auto;
             padding: 2em;
             background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         footer {
             text-align: center;
             padding: 1em 0;
-            background-color: #87CEEB; /* Light blue */
+            background-color: #1E90FF;
             color: white;
             position: fixed;
             width: 100%;
@@ -48,11 +51,12 @@
             padding: 0;
         }
         .game-list li {
-            margin: 1em 0;
+            margin: 1.5em 0;
         }
         .game-list a {
             text-decoration: none;
-            color: #87CEEB; /* Light blue */
+            color: #1E90FF;
+            font-size: 1.2em;
         }
     </style>
 </head>
@@ -76,11 +80,13 @@
     <section id="games">
         <h2>Our Games</h2>
         <ul class="game-list">
-            <li><a href="game1.html">Rock Identification Challenge</a></li>
-            <li><a href="game2.html">Weather Pattern Puzzle</a></li>
-            <li><a href="game3.html">Ocean Currents Adventure</a></li>
-            <li><a href="game4.html">Earthquake Simulator</a></li>
-            <li><a href="game5.html">Environmental Impact Quiz</a></li>
+            <li><a href="game1.html">Rock Identification Challenge (2D)</a></li>
+            <li><a href="game2.html">Weather Pattern Puzzle (2D)</a></li>
+            <li><a href="game3.html">Ocean Currents Adventure (3D)</a></li>
+            <li><a href="game4.html">Earthquake Simulator (3D)</a></li>
+            <li><a href="game5.html">Environmental Impact Quiz (2D)</a></li>
+            <li><a href="game6.html">Volcano Eruption Experience (VR)</a></li>
+            <li><a href="game7.html">Climate Change Explorer (VR)</a></li>
         </ul>
     </section>
 
