--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             color: #1E90FF;
             font-size: 1.2em;
         }
+        .game-category {
+            margin-top: 2em;
+        }
     </style>
 </head>
 <body>
@@ -79,15 +82,31 @@
 
     <section id="games">
         <h2>Our Games</h2>
-        <ul class="game-list">
-            <li><a href="game1.html">Rock Identification Challenge (2D)</a></li>
-            <li><a href="game2.html">Weather Pattern Puzzle (2D)</a></li>
-            <li><a href="game3.html">Ocean Currents Adventure (3D)</a></li>
-            <li><a href="game4.html">Earthquake Simulator (3D)</a></li>
-            <li><a href="game5.html">Environmental Impact Quiz (2D)</a></li>
-            <li><a href="game6.html">Volcano Eruption Experience (VR)</a></li>
-            <li><a href="game7.html">Climate Change Explorer (VR)</a></li>
-        </ul>
+        
+        <div class="game-category">
+            <h3>2D Games</h3>
+            <ul class="game-list">
+                <li>🌋 <a href="game1.html">Rock Identification Challenge</a></li>
+                <li>☁️ <a href="game2.html">Weather Pattern Puzzle</a></li>
+                <li>🌍 <a href="game5.html">Environmental Impact Quiz</a></li>
+            </ul>
+        </div>
+
+        <div class="game-category">
+            <h3>3D Games</h3>
+            <ul class="game-list">
+                <li>🌊 <a href="game3.html">Ocean Currents Adventure</a></li>
+                <li>🏠 <a href="game4.html">Earthquake Simulator</a></li>
+            </ul>
+        </div>
+
+        <div class="game-category">
+            <h3>VR Games</h3>
+            <ul class="game-list">
+                <li>🔥 <a href="game6.html">Volcano Eruption Experience</a></li>
+                <li>🌡️ <a href="game7.html">Climate Change Explorer</a></li>
+            </ul>
+        </div>
     </section>
 
     <section id="contact">
