--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-/*
+
+<!DOCTYPE html>
+<html lang="/*
  * ----------------------------------------------------------------------------
  * "SAVE ALL THE ANIMALS LICENSE":
  * managerdata404?wrote this file. As long as you retain this notice, you can do
@@ -27,9 +29,6 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
