--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-<html lang="/*
+<html lang="en">
+/*
  * ----------------------------------------------------------------------------
  * "SAVE ALL THE ANIMALS LICENSE":
  * managerdata404?wrote this file. As long as you retain this notice, you can do
