--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         .game-category {
             margin-top: 2em;
         }
-    </
+    </style>
 <!--
     ----------------------------------------------------------------------------
     "SAVE ALL THE ANIMALS":
